--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@
         margin-top: 0px;
         text-align: center;
     }
+    .tenida-conteiner{
+        margin-top: 50px;
+        width: 100vw;
+        height: 200px;
+        background-color: #566484;
+        text-align: center;
+    }
+    .tenida-title{
+        margin-top: 10px;
+        color: aliceblue;
+        font-family: loubag;
+    }
     </style>
 </head>
 <body>
@@ -188,7 +200,17 @@
         </figure>
         <figure class="copa-conteiner">
             <img src="copa.svg" alt="">
+            <p class="iglesia-title">Ceremonia</p>
+            <p class="iglesia-descrip">Lorem ipsum dolor sit amet</p>
         </figure>
+        <div class="tenida-conteiner">
+            <figure>
+                <img src="smokin.svg" alt="" class="smokin">
+                <img src="linea.svg" alt="">
+                <img src="vestido.svg" alt="">
+                <p class="tenida-title">Tenida elegante</p>
+            </figure>
+        </div>
     </section>
     <section class="conteiner-asistencia">
         <h1>Hola</h1>
