--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
         color: #606060;
         font-size: 25px;
         text-decoration: none;
+        font-weight: bold;
     }
     </style>
 </head>
