--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@
         <div class="form-conteiner">
             <form action="/" class="formulario">
                 <h1 class="form-title">Formulario de Asistencia</h1>
-                <label for="">Nº de Identidad
-                    <input type="number" placeholder="Nro de Identidad">
+                <label for="">Nº de Documento
+                    <input type="number" placeholder="Nº de Documento">
                 </label>
                 <label for="" id="">Primer Nombre
-                    <input type="text" placeholder="Primer Nombre">
+                    <input type="text" placeholder="Primer Nombre" required>
                 </label>
                 <label for="">Primer Apellido
-                    <input type="text" placeholder="Primer Apellido">
+                    <input type="text" placeholder="Primer Apellido" required>
                 </label>
                 <button class="btn-enviar">Enviar Asistencia</button>
             </form>
