--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <label for="">Primer Apellido
                     <input type="text" placeholder="Primer Apellido" required>
                 </label>
-                <button class="btn-enviar">Enviar Asistencia</button>
+                <button class="btn-enviar" type="submit">Enviar Asistencia</button>
             </form>
         </div>
     </section>
