Decimo-Primer commit

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <form action="/" class="formulario">
                 <h1 class="form-title">Formulario de Asistencia</h1>
                 <label for="">Nº de Documento
-                    <input type="number" placeholder="Nº de Documento">
+                    <input type="number" placeholder="Nº de Documento" required>
                 </label>
                 <label for="" id="">Primer Nombre
                     <input type="text" placeholder="Primer Nombre" required>
