--- a/index.html
+++ b/index.html
@@ -3,278 +3,292 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/footer/footer.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
     <title>Entrenamiento</title>
     <style>
-        @font-face {
-            font-family: honilad;
-            src: url(./honilad/honilad-demo.otf);
-        }
-        @font-face {
-            font-family: loubag;
-            src: url(./loubag/Loubag-Regular.ttf);
-        }
-        @font-face{
-            font-family: loubag-light;
-            src: url(./loubag/Loubag-Light.ttf);
-        }
-        @font-face {
-            font-family: good-vibrations;
-            src: url(good-vibrations.ttf);
-        }
-        body{
-            margin: 0px;
-            padding: 0%;
-            box-sizing: border-box;
-        }
-        .conteiner-portada{
-            height: 900px;
-            background-image: url(fondo-portada.jpg);
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            display: grid;
-            place-content: center;
-        }
-        .quiceaniero{  margin: 0;
-            font-family: honilad;
-            font-size: 100px;
-            color: #566484;
-        }
-        .mis-15{
-            color: #606060;
-            font-family: loubag;
-            font-size: 20px;
-        }
-        .title-conteiner{
-            width: 300px;
-            height: 200px;
-            text-align: center;
-        }
-        .conteiner-beneficios{
-            height: 900px;
-            background-image: url(fondo-beneficios.png);
-            background-size: cover;
-            background-attachment: scroll;
-            background-position: center;
-            display: grid;
-            place-content: center;
-        }
-        .conteiner-asistencia{
-            height: 900px;
-            background-image: url(fondo-invierno.jpg);
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            display: grid;
-        }
-        .fecha-evento{
-            margin-top: 50px;
-            text-align: center;
-        }
-        .evento-m, .evento-h{
-            font-family: loubag;
-            border-top: dashed 1px #606060;
-            border-bottom: dashed 1px #606060;
-            color: #606060;
-            text-transform: uppercase;
-        }
-        .evento-d{
-            font-family: loubag;
-            font-size: 30px;
-            color: #566484;
-        }
-        .cronometro, .crono-title{
-            font-family: loubag;
-            color: whitesmoke;
-            margin-top: 10px;
-        }
-        .cronometro-conteiner{
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            width: 100%;
-            align-items: center;
-        }
-        .cronometro{
-            margin-top: 5px;
-            background-color: #566484;
-            height: 100px;
-            width: 300px;
-            border: solid 2px whitesmoke;
-            border-radius: 20px;
-        }
-        .time{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-        }
-        .time p{
-            margin: 0;
-        }
-        .iglesia-conteiner{
-            margin-top: 40px;
-            display: inline-block;
-            text-align: center;
-        }
-        .iglesia-title{
-            margin: 0;
-            font-family: loubag;
-            font-size: 16px;
-            font-weight: bold;
-            color: #606060;
-        }
-        .iglesia-descrip{
-            margin: 0;
-            font-family:loubag-light;
-            color: #606060;
-            font-size: 9px;
-        }
-        .flecha{
-            text-align: center;
-        }
-        .flecha img{
-            height: 40px;
-            width: 40px;
-            margin: 0;
-            padding: 0;
-            opacity: 0;
-            animation: aparecer 1s ease-in-out forwards infinite;
-        }
-        @keyframes aparecer {
-        from { opacity: 0; }
-        to { opacity: 1; }
+@font-face {
+    font-family: honilad;
+    src: url(./honilad/honilad-demo.otf);
+}
+@font-face {
+    font-family: loubag;
+    src: url(./loubag/Loubag-Regular.ttf);
+}
+@font-face {
+    font-family: loubag-light;
+    src: url(./loubag/Loubag-Light.ttf);
+}
+
+.conteiner-portada {
+    height: 900px;
+    width: 100%;
+    background-image: url(fondo-portada.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    display: grid;
+    place-content: center;
+}
+.quiceaniero {
+    margin: 0;
+    font-family: honilad;
+    font-size: 100px;
+    color: #566484;
+}
+.mis-15 {
+    color: #606060;
+    font-family: loubag;
+    font-size: 20px;
+}
+.title-conteiner {
+    width: 300px;
+    height: 200px;
+    text-align: center;
+}
+.conteiner-beneficios {
+    height: 900px;
+    width: 100%;
+    background-image: url(fondo-beneficios.png);
+    background-size: cover;
+    background-attachment: scroll;
+    background-position: center;
+    display: grid;
+    place-content: center;
+}
+.conteiner-asistencia {
+    height: 900px;
+    width: 100%;
+    background-image: url(fondo-invierno.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    display: grid;
+}
+.fecha-evento {
+    margin-top: 50px;
+    text-align: center;
+}
+.evento-m, .evento-h {
+    font-family: loubag;
+    border-top: dashed 1px #606060;
+    border-bottom: dashed 1px #606060;
+    color: #606060;
+    text-transform: uppercase;
+}
+.evento-d {
+    font-family: loubag;
+    font-size: 30px;
+    color: #566484;
+}
+.cronometro, .crono-title {
+    font-family: loubag;
+    color: whitesmoke;
+    margin-top: 10px;
+}
+.cronometro-conteiner {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    align-items: center;
+}
+.cronometro {
+    margin-top: 5px;
+    background-color: #566484;
+    height: 100px;
+    width: 300px;
+    border: solid 2px whitesmoke;
+    border-radius: 20px;
+}
+.time {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.time p {
+    margin: 0;
+}
+.iglesia-conteiner {
+    margin-top: 40px;
+    display: inline-block;
+    text-align: center;
+}
+.iglesia-title {
+    margin: 0;
+    font-family: loubag;
+    font-size: 16px;
+    font-weight: bold;
+    color: #606060;
+}
+.iglesia-descrip {
+    margin: 0;
+    font-family: loubag-light;
+    color: #606060;
+    font-size: 9px;
+}
+.flecha {
+    text-align: center;
+}
+.flecha img {
+    height: 40px;
+    width: 40px;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    animation: aparecer 1s ease-in-out forwards infinite;
+}
+@keyframes aparecer {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+.divisor-conteiner {
+    text-align: center;
+}
+.copa-conteiner {
+    margin-top: 0px;
+    text-align: center;
+}
+.tenida-conteiner {
+    margin-top: 10px;
+    width: 100vw;
+    height: 200px;
+    background-color: #566484;
+    text-align: center;
+}
+.tenida-title {
+    margin-top: 10px;
+    color: aliceblue;
+    font-family: loubag;
+}
+.regalos-conteiner {
+    display: flex;
+    justify-content: center;
+}
+.regalos {
+    background-color: #566484;
+    border: double 10px whitesmoke;
+    border-radius: 30px;
+    margin-top: 50px;
+    height: 300px;
+    width: 300px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+input {
+    margin-top: 10px;
+    width: 250px;
+    height: 40px;
+    border-radius: 15px;
+    border: 0;
+    background-color: whitesmoke;
+    font-family: loubag;
+    color: #606060;
+}
+input::placeholder {
+    text-align: center;
+}
+.btn-enviar {
+    margin-top: 30px;
+    width: 150px;
+    height: 40px;
+    border: double 3px #606060;
+    border-radius: 15px;
+    background-color: whitesmoke;
+    position: relative;
+    box-shadow: 5px 5px 0 #606060;
+    color: #606060;
+    transition: 0.3s;
+    overflow: hidden;
+    cursor: pointer;
+}
+.btn-text{
+    font-family: loubag;
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
+    z-index: 1;
+}
+.btn-wave{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    background: url(wave.svg);
+    background-size: 200% 100%;
+    top: 100%;
+    left: 0%;
+    animation: wave 2s linear infinite;
+    transition: 0.5s;
+}
+.btn-enviar:hover{
+    color: whitesmoke;
+    border: double 1px whitesmoke;
+    background-color: #606060;
+    box-shadow: 4px 4px 0 whitesmoke;
+}
+@keyframes wave{
+    from{
+        background-position-x: 0;
+    }to{
+        background-position-x: 200%;
     }
-    .divisor-conteiner{
-        text-align: center;
-    }
-    .copa-conteiner{
-        margin-top: 0px;
-        text-align: center;
-    }
-    .tenida-conteiner{
-        margin-top: 10px;
-        width: 100vw;
-        height: 200px;
-        background-color: #566484;
-        text-align: center;
-    }
-    .tenida-title{
-        margin-top: 10px;
-        color: aliceblue;
-        font-family: loubag;
-    }
-    .regalos-conteiner{
-        display: flex;
-        justify-content: center;
-    }
-    .regalos{
-        background-color: #566484;
-        border: double 10px whitesmoke ;
-        border-radius: 30px;
-        margin-top: 50px;
-        height: 300px;
-        width: 300px;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    input{
-        margin-top: 10px;
-        width: 250px;
-        height: 40px;
-        border-radius: 15px;
-        border: 0;
-        background-color: whitesmoke;
-        font-family: loubag;
-        color: #606060;
-    }
-    input::placeholder{
-        text-align: center;
-    }
-    .btn-enviar{
-        margin-top: 30px;
-        width: 180px;
-        height: 40px;
-        border-radius: 15px;
-        border: double 5px #566484;
-        background-color: whitesmoke;
-        font-family: loubag;
-        color: #606060;
-        font-weight: bold;
-    }
-    .btn-enviar:hover{
-        cursor: pointer;
-        background-color: #5d6578;
-        border: double 5px whitesmoke;
-        color: white;
-    }
-    .bnf-1,.bnf-2,.bnf-3{
-        margin-top: 10px;
-        width: 250px;
-        height: 40px;
-        border-radius: 15px;
-        border: 0;
-        background-color: whitesmoke;
-        font-family: loubag;
-        color: #606060;
-    }
-    .carta{
-        text-align: center;
-        margin: 0;
-    }
-    .regalos-title{
-        font-family: loubag;
-        margin: 0;
-        color: whitesmoke;
-    }
-    .form-conteiner{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .formulario{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: #606060;
-        height: 500px;
-        width: 300px;
-        background-color: #566484;
-        border: double 10px whitesmoke ;
-        border-radius: 30px;
-    }
-    .form-title{
-        margin: 0;
-        font-family: honilad;
-        text-align: center;
-        font-size: 50px;
-        color: whitesmoke;
-    }
-    label{
-        margin-top: 16px;
-        text-align: center;
-        color: whitesmoke;
-        font-family: loubag;
-        font-size: 14px;
-    }
-    .footer{
-        background-color: whitesmoke;
-        margin: 0;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-    .invitados{
-        font-family: good-vibrations;
-        color: #606060;
-        font-size: 25px;
-        text-decoration: none;
-        font-weight: bold;
-    }
+}
+.btn-enviar:hover .btn-wave{
+    top: 50%;
+}
+.bnf-1, .bnf-2, .bnf-3 {
+    margin-top: 10px;
+    width: 250px;
+    height: 40px;
+    border-radius: 15px;
+    border: 0;
+    background-color: whitesmoke;
+    font-family: loubag;
+    color: #606060;
+}
+.carta {
+    text-align: center;
+    margin: 0;
+}
+.regalos-title {
+    font-family: loubag;
+    margin: 0;
+    color: whitesmoke;
+}
+.form-conteiner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #606060;
+    height: 500px;
+    width: 300px;
+    background-color: #566484;
+    border: double 10px whitesmoke;
+    border-radius: 30px;
+}
+.form-title {
+    margin: 0;
+    font-family: honilad;
+    text-align: center;
+    font-size: 50px;
+    color: whitesmoke;
+}
+label {
+    margin-top: 16px;
+    text-align: center;
+    color: whitesmoke;
+    font-family: loubag;
+    font-size: 14px;
+}
     </style>
 </head>
 <body>
@@ -352,7 +366,10 @@
                 <label for="">Primer Apellido
                     <input type="text" placeholder="Primer Apellido" required>
                 </label>
-                <button class="btn-enviar" type="submit">Enviar Asistencia</button>
+                <button class="btn-enviar" type="submit">
+                    <div class="btn-text">Enviar Asistencia</div>
+                    <div class="btn-wave"></div>
+                </button>
             </form>
         </div>
     </section>
@@ -360,7 +377,7 @@
         <a href="https://www.invitados.com.py/new/" class="invitados">Invitados</a>
         <a href="https://www.facebook.com/profile.php?id=100078168030802&sk=about"><img src="facebook.svg" alt=""></a>
         <a href="https://www.instagram.com/invitados.oficial/"><img src="instagram.svg" alt=""></a>
-        <a href="https://wa.link/pxuj4z"><img src="whatsapp.svg" alt=""></a>
+        <a href="https://wa.link/cnd0bd"><img src="whatsapp.svg" alt=""></a>
         
     </footer>
 </body>
