--- a/index.html
+++ b/index.html
@@ -3,314 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ESTILOS PARA EL FOOTER -->
     <link rel="stylesheet" href="./assets/css/footer/footer.css">
+    <!-- ESTILOS GLOBALES -->
     <link rel="stylesheet" href="./assets/css/global.css">
+    <!-- ESTILOS PARA LA SECCION DEL FORMULARIO -->
+    <link rel="stylesheet" href="./assets/css/section-asistencia/conteiner-asistencia.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/form-conteiner.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/formulario.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/form-title.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/form-label.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/form-input.css">
+    <link rel="stylesheet" href="./assets/css/section-asistencia/form-button.css">
+    <!-- SECCION BENEFICIOS -->
+    <link rel="stylesheet" href="./assets/css/section-beneficios/conteiner-bnf.css">
+    <link rel="stylesheet" href="./assets/css/section-beneficios/divisor-conteiner.css">
+    <link rel="stylesheet" href="./assets/css/section-beneficios/copa-conteiner.css">
+    <link rel="stylesheet" href="./assets/css/section-beneficios/tenida-conteiner.css">
+    <link rel="stylesheet" href="./assets/css/section-beneficios/regalos-conteiner.css">
+    <!-- SECCION PROTADA -->
+    <link rel="stylesheet" href="./assets/css/section-portada/portada-contener.css">
+    <link rel="stylesheet" href="./assets/css/section-portada/flecha.css">
+    <link rel="stylesheet" href="./assets/css/section-portada/fecha-evento.css">
+    <link rel="stylesheet" href="./assets/css/section-portada/cronometro-conteiner.css">
+    <link rel="stylesheet" href="./assets/css/section-portada/iglesia-conteiner.css">
     <title>Entrenamiento</title>
-    <style>
-@font-face {
-    font-family: honilad;
-    src: url(./honilad/honilad-demo.otf);
-}
-@font-face {
-    font-family: loubag;
-    src: url(./loubag/Loubag-Regular.ttf);
-}
-@font-face {
-    font-family: loubag-light;
-    src: url(./loubag/Loubag-Light.ttf);
-}
-
-.conteiner-portada {
-    height: 900px;
-    width: 100%;
-    background-image: url(fondo-portada.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    display: grid;
-    place-content: center;
-}
-.quiceaniero {
-    margin: 0;
-    font-family: honilad;
-    font-size: 100px;
-    color: #566484;
-}
-.mis-15 {
-    color: #606060;
-    font-family: loubag;
-    font-size: 20px;
-}
-.title-conteiner {
-    width: 300px;
-    height: 200px;
-    text-align: center;
-}
-.conteiner-beneficios {
-    height: 900px;
-    width: 100%;
-    background-image: url(fondo-beneficios.png);
-    background-size: cover;
-    background-attachment: scroll;
-    background-position: center;
-    display: grid;
-    place-content: center;
-}
-.conteiner-asistencia {
-    height: 900px;
-    width: 100%;
-    background-image: url(fondo-invierno.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    display: grid;
-}
-.fecha-evento {
-    margin-top: 50px;
-    text-align: center;
-}
-.evento-m, .evento-h {
-    font-family: loubag;
-    border-top: dashed 1px #606060;
-    border-bottom: dashed 1px #606060;
-    color: #606060;
-    text-transform: uppercase;
-}
-.evento-d {
-    font-family: loubag;
-    font-size: 30px;
-    color: #566484;
-}
-.cronometro, .crono-title {
-    font-family: loubag;
-    color: whitesmoke;
-    margin-top: 10px;
-}
-.cronometro-conteiner {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-    align-items: center;
-}
-.cronometro {
-    margin-top: 5px;
-    background-color: #566484;
-    height: 100px;
-    width: 300px;
-    border: solid 2px whitesmoke;
-    border-radius: 20px;
-}
-.time {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-.time p {
-    margin: 0;
-}
-.iglesia-conteiner {
-    margin-top: 40px;
-    display: inline-block;
-    text-align: center;
-}
-.iglesia-title {
-    margin: 0;
-    font-family: loubag;
-    font-size: 16px;
-    font-weight: bold;
-    color: #606060;
-}
-.iglesia-descrip {
-    margin: 0;
-    font-family: loubag-light;
-    color: #606060;
-    font-size: 9px;
-}
-.flecha {
-    text-align: center;
-}
-.flecha img {
-    height: 40px;
-    width: 40px;
-    margin: 0;
-    padding: 0;
-    opacity: 0;
-    animation: aparecer 1s ease-in-out forwards infinite;
-}
-@keyframes aparecer {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-.divisor-conteiner {
-    text-align: center;
-}
-.copa-conteiner {
-    margin-top: 0px;
-    text-align: center;
-}
-.tenida-conteiner {
-    margin-top: 10px;
-    width: 100vw;
-    height: 200px;
-    background-color: #566484;
-    text-align: center;
-}
-.tenida-title {
-    margin-top: 10px;
-    color: aliceblue;
-    font-family: loubag;
-}
-.regalos-conteiner {
-    display: flex;
-    justify-content: center;
-}
-.regalos {
-    background-color: #566484;
-    border: double 10px whitesmoke;
-    border-radius: 30px;
-    margin-top: 50px;
-    height: 300px;
-    width: 300px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-input{
-    margin-top: 10px;
-    width: 250px;
-    height: 40px;
-    border-radius: 15px;
-    border: 0;
-    background-color: whitesmoke;
-    font-family: loubag;
-    color: #606060;
-}
-input:focus {
-    outline: solid 1px #606060;
-    box-shadow: 4px 4px 0 #606060;
-}
-input::placeholder {
-    text-align: center;
-}
-.btn-enviar {
-    margin-top: 30px;
-    width: 150px;
-    height: 40px;
-    border: double 3px #606060;
-    border-radius: 15px;
-    background-color: whitesmoke;
-    position: relative;
-    box-shadow: 5px 5px 0 #606060;
-    color: #606060;
-    transition: 0.3s;
-    overflow: hidden;
-    cursor: pointer;
-}
-.btn-text{
-    font-family: loubag;
-    font-size: 14px;
-    font-weight: bold;
-    position: relative;
-    z-index: 1;
-}
-.btn-wave{
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    background: url(wave.svg);
-    background-size: 200% 100%;
-    top: 100%;
-    left: 0%;
-    animation: wave 2s linear infinite;
-    transition: 0.5s;
-}
-.btn-enviar:hover{
-    color: #606060;
-    border: double 4px #606060;
-    background-color: whitesmoke;
-    box-shadow: 4px 4px 0 #606060;
-}
-@keyframes wave{
-    from{
-        background-position-x: 0;
-    }to{
-        background-position-x: 200%;
-    }
-}
-.btn-enviar:hover .btn-wave{
-    top: 50%;
-}
-.bnf-1, .bnf-2, .bnf-3 {
-    margin-top: 10px;
-    width: 250px;
-    height: 40px;
-    border-radius: 15px;
-    border: 0;
-    background-color: whitesmoke;
-    font-family: loubag;
-    color: #606060;
-}
-.carta {
-    text-align: center;
-    margin: 0;
-}
-.regalos-title {
-    font-family: loubag;
-    margin: 0;
-    color: whitesmoke;
-}
-.form-conteiner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #606060;
-    height: 500px;
-    width: 300px;
-    background-color: #566484;
-    border: double 10px whitesmoke;
-    border-radius: 30px;
-}
-.form-title {
-    margin: 0;
-    font-family: honilad;
-    text-align: center;
-    font-size: 50px;
-    color: whitesmoke;
-}
-label {
-    margin-top: 16px;
-    text-align: center;
-    color: whitesmoke;
-    font-family: loubag;
-    font-size: 14px;
-}
-    </style>
 </head>
 <body>
+    <!-- SECCION PORTADA -->
     <section class="conteiner-portada">
-        <div class="title-conteiner">
-                <span class="mis-15">MIS 15 AÑOS</span>
-                <p class="quiceaniero">Valeria</p>
-                <p class="quiceaniero">Aponte</p>
-        </div>
+                <p>MIS 15 AÑOS</p>
+                <p>Valeria</p>
+                <p>Aponte</p>
         <div class="fecha-evento">
-            <span class="evento-m">Diciembre</span>
-            <span class="evento-d">20</span>
-            <span class="evento-h">8:00 PM</span>
+            <span>Diciembre</span>
+            <span>20</span>
+            <span>8:00 PM</span>
         </div>
-        <figure class="flecha">
-            <img src="flecha.svg" alt="">
+        <figure>
+            <img src="./assets/svg/flecha.svg" alt="flecha" class="flecha">
         </figure>
-        <div class="cronometro-conteiner">
             <div class="cronometro">
                 <p class="crono-title">Cuenta regresiva</p>
                 <div class="time">
@@ -320,56 +52,56 @@ label {
                     <p>00</p>
                 </div>
             </div>
-        </div>
         <figure class="iglesia-conteiner">
-            <img src="iglesia.svg" alt="iglesia">
-            <p class="iglesia-title">Ceremonia</p>
-            <p class="iglesia-descrip">Lorem ipsum dolor sit amet</p>
+            <img src="./assets/svg/iglesia.svg" alt="iglesia">
+            <p>Ceremonia</p>
+            <p>Lorem ipsum dolor sit amet</p>
         </figure>
-
     </section>
+    <!-- SECCION BENEFICIOS -->
     <section class="conteiner-beneficios">
         <figure class="divisor-conteiner">
-            <img src="divisor.svg" alt="">
+            <img src="./assets/svg/divisor.svg" alt="">
         </figure>
         <figure class="copa-conteiner">
-            <img src="copa.svg" alt="">
-            <p class="iglesia-title">Ceremonia</p>
-            <p class="iglesia-descrip">Lorem ipsum dolor sit amet</p>
+            <img src="./assets/svg/copa.svg" alt="">
+            <p>Ceremonia</p>
+            <p>Lorem ipsum dolor sit amet</p>
         </figure>
         <div class="tenida-conteiner">
             <figure>
-                <img src="smokin.svg" alt="" class="smokin">
-                <img src="linea.svg" alt="">
-                <img src="vestido.svg" alt="">
-                <p class="tenida-title">Tenida elegante</p>
+                <img src="./assets/svg/smokin.svg" alt="" class="smokin">
+                <img src="./assets/svg/linea.svg" alt="">
+                <img src="./assets/svg/vestido.svg" alt="">
             </figure>
+            <p>Tenida elegante</p>
         </div>
         <div class="regalos-conteiner">
             <div class="regalos">
                 <figure class="carta">
-                    <img src="carta.svg" alt="">
+                    <img src="./assets/svg/carta.svg" alt="">
                 </figure>
-                <p class="regalos-title">Lluvia de regalos</p>
+                <p>Lluvia de regalos</p>
                 <button class="bnf-1">Beneficio 1</button>
                 <button class="bnf-2">Beneficio 2</button>
                 <button class="bnf-2">Beneficio 3</button>
             </div>
         </div>
     </section>
+    <!-- SECCION ASISTENCIA -->
     <section class="conteiner-asistencia">
-        <div class="form-conteiner">
+        <div class="form-conteiner">    
             <form action="/" class="formulario">
                 <h1 class="form-title">Formulario de Asistencia</h1>
                 <label for="ci">Nº de Documento
-                    <input type="number" name="ci" id="ci" placeholder="Nº de Documento" required>
                 </label>
+                <input type="number" name="ci" id="ci" placeholder="Nº de Documento" required>
                 <label for="name">Primer Nombre
-                    <input type="text" name="name" id="name" placeholder="Primer Nombre" required>
                 </label>
+                <input type="text" name="name" id="name" placeholder="Primer Nombre" required>
                 <label for="apellido">Primer Apellido
-                    <input type="text" name="apellido" id="apellido" placeholder="Primer Apellido" required>
                 </label>
+                <input type="text" name="apellido" id="apellido" placeholder="Primer Apellido" required>
                 <button class="btn-enviar" type="submit">
                     <div class="btn-text">Enviar Asistencia</div>
                     <div class="btn-wave"></div>
@@ -377,11 +109,12 @@ label {
             </form>
         </div>
     </section>
+    <!-- SECCION FOOTER -->
     <footer class="footer">
         <a href="https://www.invitados.com.py/new/" class="invitados">Invitados</a>
-        <a href="https://www.facebook.com/profile.php?id=100078168030802&sk=about"><img src="facebook.svg" alt=""></a>
-        <a href="https://www.instagram.com/invitados.oficial/"><img src="instagram.svg" alt=""></a>
-        <a href="https://wa.link/cnd0bd"><img src="whatsapp.svg" alt=""></a>
+        <a href="https://www.facebook.com/profile.php?id=100078168030802&sk=about"><img src="./assets/svg/facebook.svg" alt=""></a>
+        <a href="https://www.instagram.com/invitados.oficial/"><img src="./assets/svg/instagram.svg" alt=""></a>
+        <a href="https://wa.link/cnd0bd"><img src="./assets/svg/whatsapp.svg" alt=""></a>
         
     </footer>
 </body>
