Agregacion del contador de fecha

--- a/index.html
+++ b/index.html
@@ -43,15 +43,27 @@
         <figure>
             <img src="./assets/svg/flecha.svg" alt="flecha" class="flecha">
         </figure>
-            <div class="cronometro">
-                <p class="crono-title">Cuenta regresiva</p>
-                <div class="time">
-                    <p>90</p>
-                    <p>00</p>
-                    <p>00</p>
-                    <p>00</p>
+        <div class="countdown">
+            <p class="countdown-title">Cuenta regresiva</p>
+            <div class="countdown-conteiner">
+                <div class="countdown-element days-c">
+                    <p class="big-text" id="days">0</p>
+                    <span>days</span>
+                </div>
+                <div class="countdown-element hours-c">
+                    <p class="big-text" id="hours">0</p>
+                    <span>Hours</span>
+                </div>
+                <div class="countdown-element mins-c">
+                    <p class="big-text" id="mins">0</p>
+                    <span>Mins</span>
+                </div>
+                <div class="countdown-element seconds-c">
+                    <p class="big-text" id="seconds">0</p>
+                    <span>Seconds</span>
                 </div>
             </div>
+        </div>
         <figure class="iglesia-conteiner">
             <img src="./assets/svg/iglesia.svg" alt="iglesia">
             <p>Ceremonia</p>
@@ -115,7 +127,7 @@
         <a href="https://www.facebook.com/profile.php?id=100078168030802&sk=about"><img src="./assets/svg/facebook.svg" alt=""></a>
         <a href="https://www.instagram.com/invitados.oficial/"><img src="./assets/svg/instagram.svg" alt=""></a>
         <a href="https://wa.link/cnd0bd"><img src="./assets/svg/whatsapp.svg" alt=""></a>
-        
     </footer>
+    <script src="./assets/js/countdown.js"></script>
 </body>
 </html>
